@@ -47,6 +47,7 @@ bugfix:
 - fixed an issue where predefined applications were created as TMP
 - fixed an issue with 'filter=(rule has.source.nat)' where no source NAT rule were shown
 - fixed a crash when trying to add tag to temporary address objects
+- fix address-edit help name-rename output
 
 
 1.5.12 (2017-04-04)
